v2 stash commit